# Horizon

./: .gitignore  .travis.yml  Cargo.toml  LICENSE_MIT  build.rs  config.toml
.cargo/: config.toml
res/: final_todo.md
src/: components.rs  ecscontainer.rs  filesystem.rs  lib.rs  main.rs  renderer.rs  resources.rs  scripting.rs  state.rs  systems.rs  utils.rs
src/components/: assetidentifier.rs  collisionshape.rs  componentparser.rs  componenttypes.rs  gltfmodel.rs  modelcollider.rs  physicshandle.rs  scriptingcallback.rs  transform.rs
src/filesystem/: fileloader.rs  modelimporter.rs  nativefileloader.rs  webfileloader.rs
src/primitives/: vertex.rs
src/renderer/: bindgroupcontainer.rs  bindgroups.rs  cam.rs  light.rs  model.rs  modelbuilder.rs  pass.rs  pipelines.rs  primitives.rs  renderpasses.rs  state.rs  utils.rs
src/renderer/bindgroups/: debugcollision.rs  debugtexture.rs  deferred.rs  gbuffer.rs  lighting.rs  material.rs  shadow.rs  skybox.rs  tiling.rs  uniforms.rs
src/renderer/pipelines/: debugcollision.rs  debugtexturepipeline.rs  forwardpipeline.rs  gbufferpipeline.rs  lightcullingpipeline.rs  lightpipeline.rs  shadowpipeline.rs  skyboxpipeline.rs
src/renderer/primitives/: instance.rs  lights.rs  material.rs  mesh.rs  texture.rs  uniforms.rs  vertex.rs
src/renderer/primitives/lights/: directionallight.rs  pointlight.rs  spotlight.rs
src/renderer/renderpasses/: shadowpass.rs
src/renderer/utils/: ecscontainer.rs  glmconversion.rs  texturerenderer.rs
src/resources/: bindingresourcecontainer.rs  camera.rs  commandencoder.rs  defaulttexturecontainer.rs  deltatime.rs  eguicontainer.rs  eguirenderpass.rs  gpuquerysets.rs  projection.rs  renderresult.rs  scriptingstate.rs  surfacetexture.rs  windowevents.rs  windowstate.rs
src/scripting/: lifecycleevents.rs  mod.rs  scriptevent.rs  scriptingengine.rs  scriptingfunctions.rs
src/scripting/util/: componentconversions.rs  entityinfo.rs  glmconversion.rs  horizonentity.rs  horizonresource.rs  mod.rs
src/shaders/: colliderRenderer.wgsl  forward.wgsl  gbuffer.frag  gbuffer.vert  gbuffer.wgsl  light.frag  light.vert  light.wgsl  lightculling.comp_EXAMPLE  lightculling.wgsl  shader.frag  shader.vert  shader_complex.frag  shader_complex.vert  shadow.frag  shadow.vert  shadow.wgsl  skybox.wgsl  textureRenderer.frag  textureRenderer.vert  textureRenderer.wgsl
src/shaders/native/: colliderRenderer.wgsl  forward.wgsl  gbuffer.wgsl  light.wgsl  lightculling.wgsl  skybox.wgsl
src/shaders/web/: colliderRenderer.wgsl  forward.wgsl  gbuffer.wgsl  light.wgsl  lightculling.wgsl  shadow.wgsl  skybox.wgsl  textureRenderer.wgsl
src/systems/: computelightculling.rs  handlewindowevents.rs  mod.rs  movement.rs  physics.rs  renderforwardpass.rs  rendershadowpass.rs  renderuipass.rs  resize.rs  updatebuffers.rs  writegbuffer.rs
src/systems/events/: handlelifecycleevents.rs  handlewindowevents.rs  mod.rs  resize.rs
src/systems/rendering/: acquiretexture.rs  computelightculling.rs  mod.rs  rendercollision.rs  renderforwardpass.rs  rendershadowpass.rs  renderskybox.rs  renderuipass.rs  resolvequerysets.rs  updatebuffers.rs  updatecamera.rs  updateuniformbuffers.rs  writegbuffer.rs
src/systems/util/: calculatedeltatime.rs  mod.rs
src/ui/: debugstats.rs  gpustats.rs  menu.rs  mod.rs  scriptingconsole.rs
tests/: web.rs
