[package]
name = "horizon"
version = "0.1.0"
authors = ["Roland Mikhel <roland.mikhel@gmail.com>"]
repository = "https://github.com/Roolli/Horizon/"
edition = "2018"
description="Cross-platform 2D/3D engine using WebGPU and Rust (WebAssembly for browsers)"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name ="horizon-native"
test = false
bench = false
path = "src/main.rs"


#[target.'cfg(target_arch="x86_64")'.dependencies]
#rusty_v8 = "0.15.0"

[features]
default = ["console_error_panic_hook"]

[dependencies]

winit = "0.24.0"
nalgebra = "0.24.0"
glm= {version="0.10.0", package="nalgebra-glm"}
rapier3d={version="0.5.0"}
futures = "0.3.12"
bytemuck=  { version = "1.5.0", features = ["derive"]}
specs={version="0.16.1", features=["specs-derive"], default-features=false }
anyhow = "1.0.38"
tobj = "2.0.3"
log = "0.4"
async-trait = "0.1.42"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
env_logger = "0.8.2"
chrono = "0.4.19"








[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2.0"
glob ="0.3"
shaderc="0.7.1"
rayon="1.5.0"

[target.'cfg(target_arch="wasm32")'.dependencies]
chrono = {version="0.4.19", features=["wasmbind"]}
wasm-bindgen = "0.2.69"
console_log = "0.2.0"
wee_alloc = { version = "0.4.5", optional = true }
winit = {version ="0.24.0", features = ["web-sys"]}
js-sys= "=0.3.46"
console_error_panic_hook = { version = "0.1.6", optional = true }
wasm-bindgen-futures = "0.4.19"
web-sys = { version="=0.3.46",features = [
     "Document",
    "Navigator",
    "Node",
    "NodeList",
    "Gpu",
    "GpuAdapter",
    "GpuAddressMode",
    "GpuBindGroup",
    "GpuBindGroupEntry",
    "GpuBindGroupDescriptor",
    "GpuBindGroupLayout",
    "GpuBindGroupLayoutEntry",
    "GpuBindGroupLayoutDescriptor",
    "GpuBlendDescriptor",
    "GpuBlendFactor",
    "GpuBlendOperation",
    "GpuBindingType",
    "GpuBuffer",
    "GpuBufferBinding",
    "GpuBufferCopyView",
    "GpuBufferDescriptor",
    "GpuCanvasContext",
    "GpuColorDict",
    "GpuColorStateDescriptor",
    "GpuCommandBuffer",
    "GpuCommandBufferDescriptor",
    "GpuCommandEncoder",
    "GpuCommandEncoderDescriptor",
    "GpuCompareFunction",
    "GpuComputePassDescriptor",
    "GpuComputePassEncoder",
    "GpuComputePipeline",
    "GpuComputePipelineDescriptor",
    "GpuCullMode",
    "GpuDepthStencilStateDescriptor",
    "GpuDevice",
    "GpuDeviceDescriptor",
    "GpuExtent3dDict",
    "GpuFilterMode",
    "GpuFrontFace",
    "GpuIndexFormat",
    "GpuInputStepMode",
    "GpuLimits",
    "GpuLoadOp",
    "GpuOrigin3dDict",
    "GpuPipelineLayout",
    "GpuPipelineLayoutDescriptor",
    "GpuPowerPreference",
    "GpuPrimitiveTopology",
    "GpuProgrammableStageDescriptor",
    "GpuQueue",
    "GpuRasterizationStateDescriptor",
    "GpuRenderPassColorAttachmentDescriptor",
    "GpuRenderPassDepthStencilAttachmentDescriptor",
    "GpuRenderPassDescriptor",
    "GpuRenderPassEncoder",
    "GpuRenderPipeline",
    "GpuRenderPipelineDescriptor",
    "GpuRequestAdapterOptions",
    "GpuSampler",
    "GpuSamplerDescriptor",
    "GpuShaderModule",
    "GpuShaderModuleDescriptor",
    "GpuStencilOperation",
    "GpuStencilStateFaceDescriptor",
    "GpuStoreOp",
    "GpuSwapChain",
    "GpuSwapChainDescriptor",
    "GpuTexture",
    "GpuTextureAspect",
    "GpuTextureComponentType",
    "GpuTextureCopyView",
    "GpuTextureDescriptor",
    "GpuTextureDimension",
    "GpuTextureFormat",
    "GpuTextureViewDescriptor",
    "GpuTextureViewDimension",
    "GpuTextureView",
    "GpuVertexAttributeDescriptor",
    "GpuVertexBufferLayoutDescriptor",
    "GpuVertexFormat",
    "GpuVertexStateDescriptor",
    "GpuVertexAttributeDescriptor",
    "HtmlCanvasElement",
     'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',]}
[dependencies.wgpu]
path = "../wgpu-rs"
version="0.7.0"
features=["vulkan-portability"]

[dependencies.image]
version= "0.23"
default-features = false
features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]


[target.'cfg(target_arch="wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.19"
wgpu-subscriber="0.1.0"



[profile.release]
opt-level = 3
lto = true
