[package]
name = "horizon"
version = "0.2.0"
resolver="2"
authors = ["Roland Mikhel <roland.mikhel@gmail.com>"]
repository = "https://github.com/Roolli/Horizon/"
edition = "2021"
description="Cross-platform 3D engine using WebGPU and Rust (WebAssembly for browsers)"

[lib]
crate-type = ["cdylib","rlib"]
path = "src/lib.rs"

[[bin]]
name ="horizon-native"
test = false
bench = false
path = "src/main.rs"


#[target.'cfg(target_arch="x86_64")'.dependencies]
#

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
nalgebra = "0.24.0"
glm= {version="0.10.0", package="nalgebra-glm"}
rapier3d={version="0.5.0"}
futures = "0.3.12"
bytemuck=  { version = "1.5.0", features = ["derive"]}
specs={version="0.16.1", features=["specs-derive"], default-features=false }
anyhow = "1.0.38"
tobj = "2.0.3"
log = "0.4"
async-trait = "0.1.42"
egui = "0.16"
epi="0.16"
egui_wgpu_backend ="0.16"
egui_winit_platform = "0.13.0"
egui_demo_lib= "0.16"
rand = "0.8"
once_cell = "1.8.0"
lazy_static = "1.4.0"
ref_thread_local = "0.1.1"

[target.'cfg(windows)'.dependencies]
winit = {version="0.26.0"}

[target.'cfg(unix)'.dependencies]
winit = {version="0.26.0", features=['x11'] }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
env_logger = "0.8.2"
chrono = "0.4.19"
rusty_v8 = "0.21.0"



[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2.0"
glob ="0.3"
shaderc="0.7.1"
rayon="1.5.0"

[target.'cfg(target_arch="wasm32")'.dependencies]
getrandom = {version="0.2", features=["js"]}
chrono = {version="0.4.19", features=["wasmbind"]}
wasm-bindgen = {version="0.2.76", features=["serde-serialize"] }
wasm-bindgen-futures = "0.4.28"
console_log = "0.2.0"
#wee_alloc = { version = "0.4.5", optional = true }
winit = {version ="0.26.0"}
js-sys= "0.3.50"
console_error_panic_hook = { version = "0.1.6", optional = true }
web-sys = { version="0.3.53",features = [
 "Document",
    "Navigator",
    "Node",
    "NodeList",
    "Gpu",
    "GpuAdapter",
    "GpuAddressMode",
    "GpuBindGroup",
    "GpuBindGroupDescriptor",
    "GpuBindGroupEntry",
    "GpuBindGroupLayout",
    "GpuBindGroupLayoutDescriptor",
    "GpuBindGroupLayoutEntry",
    "GpuBlendComponent",
    "GpuBlendFactor",
    "GpuBlendOperation",
    "GpuBlendState",
    "GpuBuffer",
    "GpuBufferBinding",
    "GpuBufferBindingLayout",
    "GpuBufferBindingType",
    "GpuBufferDescriptor",
    "GpuBufferUsage",
    "GpuCanvasContext",
    "GpuCanvasConfiguration",
    "GpuColorDict",
    "GpuColorTargetState",
    "GpuColorWrite",
    "GpuCommandBuffer",
    "GpuCommandBufferDescriptor",
    "GpuCommandEncoder",
    "GpuCommandEncoderDescriptor",
    "GpuCompareFunction",
    "GpuCompilationInfo",
    "GpuCompilationMessage",
    "GpuCompilationMessageType",
    "GpuComputePassDescriptor",
    "GpuComputePassEncoder",
    "GpuComputePipeline",
    "GpuComputePipelineDescriptor",
    "GpuCullMode",
    "GpuDepthStencilState",
    "GpuDevice",
    "GpuDeviceDescriptor",
    "GpuDeviceLostInfo",
    "GpuDeviceLostReason",
    "GpuErrorFilter",
    "GpuExtent3dDict",
    "GpuFeatureName",
    "GpuFilterMode",
    "GpuFragmentState",
    "GpuFrontFace",
    "GpuImageCopyBuffer",
    "GpuImageCopyTexture",
    "GpuImageDataLayout",
    "GpuIndexFormat",
    "GpuLoadOp",
    "GpuMapMode",
    "GpuMultisampleState",
    "GpuObjectDescriptorBase",
    "GpuOrigin2dDict",
    "GpuOrigin3dDict",
    "GpuOutOfMemoryError",
    "GpuPipelineDescriptorBase",
    "GpuPipelineLayout",
    "GpuPipelineLayoutDescriptor",
    "GpuPipelineStatisticName",
    "GpuPowerPreference",
    "GpuPrimitiveState",
    "GpuPrimitiveTopology",
    "GpuProgrammableStage",
    "GpuQuerySet",
    "GpuQuerySetDescriptor",
    "GpuQueryType",
    "GpuQueue",
    "GpuRenderBundle",
    "GpuRenderBundleDescriptor",
    "GpuRenderBundleEncoder",
    "GpuRenderBundleEncoderDescriptor",
    "GpuRenderPassColorAttachment",
    "GpuRenderPassDepthStencilAttachment",
    "GpuRenderPassDescriptor",
    "GpuRenderPassEncoder",
    "GpuRenderPipeline",
    "GpuRenderPipelineDescriptor",
    "GpuRequestAdapterOptions",
    "GpuSampler",
    "GpuSamplerBindingLayout",
    "GpuSamplerBindingType",
    "GpuSamplerDescriptor",
    "GpuShaderModule",
    "GpuShaderModuleDescriptor",
    "GpuShaderStage",
    "GpuStencilFaceState",
    "GpuStencilOperation",
    "GpuStorageTextureAccess",
    "GpuStorageTextureBindingLayout",
    "GpuStoreOp",
    "GpuSupportedFeatures",
    "GpuSupportedLimits",
    "GpuTexture",
    "GpuTextureAspect",
    "GpuTextureBindingLayout",
    "GpuTextureDescriptor",
    "GpuTextureDimension",
    "GpuTextureFormat",
    "GpuTextureSampleType",
    "GpuTextureUsage",
    "GpuTextureView",
    "GpuTextureViewDescriptor",
    "GpuTextureViewDimension",
    "GpuUncapturedErrorEvent",
    "GpuUncapturedErrorEventInit",
    "GpuValidationError",
    "GpuVertexAttribute",
    "GpuVertexBufferLayout",
    "GpuVertexFormat",
    "GpuVertexState",
    "GpuVertexStepMode",
    "HtmlCanvasElement",
    "OffscreenCanvas",
    "Window",
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Screen',
    'CssStyleDeclaration',
  ]}
[dependencies.wgpu]
version="0.12" 

[dependencies.image]
version= "0.23"
default-features = false
features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]


[target.'cfg(target_arch="wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.19"
wgpu-subscriber="0.1.0"



# [profile.release]
# opt-level = 3
# lto = "thin"
# debug =true
