[package]
name = "horizon"
version = "0.5.0"
resolver="2"
authors = ["Roland Mikhel <roland.mikhel@gmail.com>"]
repository = "https://github.com/Roolli/Horizon/"
edition = "2021"
description="Cross-platform 3D engine using WebGPU and Rust (WebAssembly for browsers)"

[lib]
crate-type = ["cdylib","rlib"]
path = "src/lib.rs"

[[bin]]
name ="horizon-native"
test = false
bench = false
path = "src/main.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rapier3d={version="0.11.1",features=["serde-serialize"]}
futures = "0.3.12"
bytemuck=  { version = "1.5.0", features = ["derive"]}
specs={version="0.16.1", features=["specs-derive"], default-features=false }
anyhow = "1.0.38"
log = "0.4"
async-trait = "0.1.42"
egui = "0.17.0"
epi="0.16"
#egui_wgpu_backend ={git= "https://github.com/hasenbanck/egui_wgpu_backend"}
egui_wgpu_backend = "0.17.0"
egui-winit = "0.17.0"
rand = "0.8"
once_cell = "1.8.0"
lazy_static = "1.4.0"
ref_thread_local = "0.1.1"
ddsfile = "0.5.0"
enum-map = "2.0.2"
gltf = {version= "1.0.0",features= ["KHR_materials_transmission","KHR_materials_unlit"]}


[target.'cfg(windows)'.dependencies]
winit = {version="0.26.0"}

[target.'cfg(unix)'.dependencies]
winit = {version="0.26.0", features=['x11'] }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
env_logger = "0.8.2"
chrono = "0.4.19"
#v8 = "0.41.0"
deno_core = "0.124.0"
deno_web = "0.73.0"
deno_webidl = "0.42.0"
deno_url = "0.42.0"
deno_console = "0.42.0"
tokio = { version = "1.10.1", features = ["full"] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2.0"
glob ="0.3"
rayon="1.5.0"

[target.'cfg(target_arch="wasm32")'.dependencies]
getrandom = {version="0.2", features=["js"]}
chrono = {version="0.4.19", features=["wasmbind"]}
wasm-bindgen = {version="0.2.76", features=["serde-serialize"] }
wasm-bindgen-futures = "0.4.28"
console_log = "0.2.0"
#wee_alloc = { version = "0.4.5", optional = true }
winit = {version ="0.26.0"}
js-sys= "0.3.50"
console_error_panic_hook = { version = "0.1.6", optional = true }
web-sys = { version="0.3.53",features = [
 "Document",
    "Navigator",
    "Node",
    "NodeList",
    "Gpu",
    "GpuAdapter",
    "GpuAddressMode",
    "GpuBindGroup",
    "GpuBindGroupDescriptor",
    "GpuBindGroupEntry",
    "GpuBindGroupLayout",
    "GpuBindGroupLayoutDescriptor",
    "GpuBindGroupLayoutEntry",
    "GpuBlendComponent",
    "GpuBlendFactor",
    "GpuBlendOperation",
    "GpuBlendState",
    "GpuBuffer",
    "GpuBufferBinding",
    "GpuBufferBindingLayout",
    "GpuBufferBindingType",
    "GpuBufferDescriptor",
    "GpuBufferUsage",
    "GpuCanvasContext",
    "GpuCanvasConfiguration",
    "GpuColorDict",
    "GpuColorTargetState",
    "GpuColorWrite",
    "GpuCommandBuffer",
    "GpuCommandBufferDescriptor",
    "GpuCommandEncoder",
    "GpuCommandEncoderDescriptor",
    "GpuCompareFunction",
    "GpuCompilationInfo",
    "GpuCompilationMessage",
    "GpuCompilationMessageType",
    "GpuComputePassDescriptor",
    "GpuComputePassEncoder",
    "GpuComputePipeline",
    "GpuComputePipelineDescriptor",
    "GpuCullMode",
    "GpuDepthStencilState",
    "GpuDevice",
    "GpuDeviceDescriptor",
    "GpuDeviceLostInfo",
    "GpuDeviceLostReason",
    "GpuErrorFilter",
    "GpuExtent3dDict",
    "GpuFeatureName",
    "GpuFilterMode",
    "GpuFragmentState",
    "GpuFrontFace",
    "GpuImageCopyBuffer",
    "GpuImageCopyTexture",
    "GpuImageDataLayout",
    "GpuIndexFormat",
    "GpuLoadOp",
    "GpuMapMode",
    "GpuMultisampleState",
    "GpuObjectDescriptorBase",
    "GpuOrigin2dDict",
    "GpuOrigin3dDict",
    "GpuOutOfMemoryError",
    "GpuPipelineDescriptorBase",
    "GpuPipelineLayout",
    "GpuPipelineLayoutDescriptor",
    "GpuPipelineStatisticName",
    "GpuPowerPreference",
    "GpuPrimitiveState",
    "GpuPrimitiveTopology",
    "GpuProgrammableStage",
    "GpuQuerySet",
    "GpuQuerySetDescriptor",
    "GpuQueryType",
    "GpuQueue",
    "GpuRenderBundle",
    "GpuRenderBundleDescriptor",
    "GpuRenderBundleEncoder",
    "GpuRenderBundleEncoderDescriptor",
    "GpuRenderPassColorAttachment",
    "GpuRenderPassDepthStencilAttachment",
    "GpuRenderPassDescriptor",
    "GpuRenderPassEncoder",
    "GpuRenderPipeline",
    "GpuRenderPipelineDescriptor",
    "GpuRequestAdapterOptions",
    "GpuSampler",
    "GpuSamplerBindingLayout",
    "GpuSamplerBindingType",
    "GpuSamplerDescriptor",
    "GpuShaderModule",
    "GpuShaderModuleDescriptor",
    "GpuShaderStage",
    "GpuStencilFaceState",
    "GpuStencilOperation",
    "GpuStorageTextureAccess",
    "GpuStorageTextureBindingLayout",
    "GpuStoreOp",
    "GpuSupportedFeatures",
    "GpuSupportedLimits",
    "GpuTexture",
    "GpuTextureAspect",
    "GpuTextureBindingLayout",
    "GpuTextureDescriptor",
    "GpuTextureDimension",
    "GpuTextureFormat",
    "GpuTextureSampleType",
    "GpuTextureUsage",
    "GpuTextureView",
    "GpuTextureViewDescriptor",
    "GpuTextureViewDimension",
    "GpuUncapturedErrorEvent",
    "GpuUncapturedErrorEventInit",
    "GpuValidationError",
    "GpuVertexAttribute",
    "GpuVertexBufferLayout",
    "GpuVertexFormat",
    "GpuVertexState",
    "GpuVertexStepMode",
    "HtmlCanvasElement",
    "OffscreenCanvas",
    "Window",
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Screen',
    'CssStyleDeclaration',
  ]}
[dependencies.wgpu]
version="0.12"

[dependencies.image]
version= "0.24.0"
default-features = false
features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]


[target.'cfg(target_arch="wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.19"
wgpu-subscriber="0.1.0"



# [profile.release]
# opt-level = 3
# lto = "thin"
# debug =true
